# vrep

./: .gitignore  Cargo.toml  README.md  install.sh  sample.txt  semantic_test.txt  stress_test.log.vrepidx
benches/: scan_bench.rs
scripts/: check-model-safe.ps1  check-model-safe.sh  install-linux.sh  run-semantic-safe.ps1  run-semantic-safe.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
