[package]
name = "vrep-core"
version = "1.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memchr = "2.7"
memmap2 = "0.9"
rayon = "1.10"
aho-corasick = "1.1"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = "0.15"
ndarray = "0.17"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scan_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
